
4. support for copying directories through magix.file.copy-directory


*****************************************************************************************************************************************
*
*                    Magix Illuminate Phosphorus version 1.06
*
*****************************************************************************************************************************************

1.  added "magix.forms.timer.enable" active event for disabling and enabling magix.forms.timer(s)

2.  changed magix.smtp namespace logic

3.  added magix.pop3 and magix.imap namespace for retrieving emails from pop3 and imap servers

4.  created email client "magix mail" as a lightweight alternative to Gmail

5.  created magix.execute.sort keyword to sort node lists

6.  created magix.date.format active event to format dates

7.  fixed a bug in the comparison logic when comparing nodes in [if], [else-if] and [while]

8.  added more unit tests

9.  significantly improved execution of comparison statements, affecting [if], [else-if] and [while]
    making unit tests execute apprx. 30% faster

10. fixed a bug in magix.forms.set-style that made it impossible to remove a style value

11. fixed such that some active events that is created initially during startup is not serialized, as they neither should

12. added support for changing cs class when invoking magix.viewport.clear-controls by adding new-class as paratemeter to reset-class

13. added case parameter to magix.execute.index-of to make it possible to perform a case-insensitive search for a string

14. magix.forms.set-info can now take formatting parameters

15. fixed a bug in magix.execute.replace that didn't allow for "with" to have formatting parameters without messing up "what"

16. added support for replacing \r, \n and \t in magix.execute.replace in both "with" and "what" parameters






