@@ -219,7 +219,7 @@ namespace Magix.email
                 if (!headersOnly)
                 {
                     string bodyHtml = RemoveHtmlBody(Functions.RemoveScriptTags(idxEmail.Body));
-                    ip["result"]["uid-" + idxEmail.MessageId]["body"].Value = SaveAttachmentsLocally(e.Params, idxEmail, user, bodyHtml);
+                    ip["result"]["uid-" + idxEmail.MessageId]["body"].Value = SaveAttachmentsLocally(e.Params, idxEmail, user, bodyHtml, ip["result"]["uid-" + idxEmail.MessageId]);
                 }
 
                 if (idxEmail.SmimeSigningCertificateChain.Count > 0)
